<resources>
    <string name="app_name">Quran Muslim</string>
    <string name="fromnorth">Degrees from the north</string>
    <string name="title_activity_main">Quran Indonesia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">By : simplecode01</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="menu_quran">Quran</string>
    <string name="menu_rating">Beri Rating</string>
    <string name="menu_contact">Kontak Kami</string>
    <string name="menu_about_us">Tentang Kami</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="user">Profile</string>
    <string name="read_rules">Hukum Tajwid Quran</string>
    <string name="jam_Sholat">Jam Sholat</string>
    <string name="qibla">Qiblat</string>
    <string name="tab_surah">Surat</string>
    <string name="tab_juz">Juz</string>
    <string name="tab_bookmark">Penanda</string>

    <string name="body_notif">Waktunya Sholat</string>

    <string name="gunnah">فَسَبِّحْ بِحَمْدِ رَبِّكَ وَاسْتَغْفِرْهُۗ اِنَّهٗ كَانَ تَوَّابًا</string>
    <string name="qalqalah"> قُلۡ هُوَ ٱللَّهُ أَحَدٌ</string>
    <string name="iqlab">فَخَلَفَ مِنْۢ بَعْدِهِمْ خَلْفٌ اَضَاعُوا الصَّلٰوةَ وَاتَّبَعُوا الشَّهَوٰتِ فَسَوْفَ يَلْقَوْنَ غَيًّا</string>
    <string name="idhgam">وَالَّذِيْ خَلَقَ الْاَزْوَاجَ كُلَّهَا وَجَعَلَ لَكُمْ مِّنَ الْفُلْكِ وَالْاَنْعَامِ مَا تَرْكَبُوْن</string>
    <string name="ikhfa">وَمَا اخْتَلَفْتُمْ فِيْهِ مِنْ شَيْءٍ فَحُكْمُهٗٓ اِلَى اللّٰهِ ۗذٰلِكُمُ اللّٰهُ رَبِّيْ عَلَيْهِ تَوَكَّلْتُۖ وَاِلَيْهِ اُنِيْب</string>


    <string name="tab_instagram">\@ptravi_001</string>
    <string name="tab_github">\simplecode01</string>

    <string name="no_account">Not Have account ? <b>SignUp</b></string>


</resources>