<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_baseline_star"
            android:title="@string/menu_rating" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_baseline_info"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_baseline_message"
            android:title="@string/feedback" />

        <item
            android:id="@+id/nav_read_rules"
            android:icon="@drawable/ic_baseline_menu_book"
            android:title="@string/read_rules"/>

        <item
            android:id="@+id/nav_qibla"
            android:icon="@drawable/ic_baseline_location_on"
            android:title="@string/qibla"/>
    </group>

</menu>