<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ghunnah : "
                android:textColor="@color/color_ghunna"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dibaca dua harakat atau dua ketukan. Cara membacanya yakni dengan menekan huruf Mim dan Nun yang bertasydid."/>

        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider"/>

        <LinearLayout
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Qalqalah : "
                android:textColor="@color/color_qalqala"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dibaca memantul atau dipantulkan. Hukum bacaan dari pengertian qalqalah ada dua macam, yakni qalqalah sugra (kecil) dan kubra (besar)."/>

        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider"/>

        <LinearLayout
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Iqlab : "
                android:textColor="@color/color_iqlab"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dibaca dengan menukar atau mengganti nun mati atau tanwin menjadi mim mati sebelum ba' disertai dengan bacaan dengung samar."/>

        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider"/>

        <LinearLayout
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="idgham : "
                android:textColor="@color/color_idgham"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dibaca dengan melebur dan disertai dengungan atau yang berarti memasukkan salah satu huruf nun mati atau tanwin ke dalam huruf sesudahnya dan lafal dari idgham bighunnah tersebut haruslah mendengung jika bertemu empat huruf yaitu Nun, Mim, Wau, Ya'."/>

        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider"/>

        <LinearLayout
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ikhfa : "
                android:textColor="@color/color_ikhfa"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dibaca dengan menyamarkan atau membunyikan beberapa huruf tertentu ke huruf selanjutnya."/>

        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider"/>

        <LinearLayout
            android:padding="5dp"
            android:background="@color/color_ghunna"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Ghunnah"
                android:textColor="#000"/>
            <ImageView
                android:id="@+id/btn_play_ghunnah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_play_arrow"/>
        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvGhun"
                android:fontFamily="@font/hafs"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gunnah"
                android:textSize="10pt"
                android:textColor="#000"/>
            <TextView
                android:layout_marginTop="10dp"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="maka bertasbihlah dalam dengan Tuhanmu dan mohonlah ampunan kepada-Nya. Sungguh, Dia Maha Penerima tobat."
                android:textSize="8pt"/>

        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:background="@color/color_qalqala"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Qalqalah"
                android:textColor="#000"/>
            <ImageView
                android:id="@+id/btn_play_qalqalah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_play_arrow"/>
        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvQalqalah"
                android:fontFamily="@font/hafs"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qalqalah"
                android:textSize="10pt"
                android:textColor="#000"/>
            <TextView
                android:layout_marginTop="10dp"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Katakanlah, “Dialah Allah, Yang Maha Esa."
                android:textSize="8pt"/>

        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:background="@color/color_iqlab"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Iqlab"
                android:textColor="#000"/>
            <ImageView
                android:id="@+id/btn_play_iqlab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_play_arrow"/>
        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvIqlab"
                android:fontFamily="@font/hafs"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/iqlab"
                android:textSize="10pt"
                android:textColor="#000"/>
            <TextView
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Maka datanglah setelah mereka pengganti yang mengabaikan salat dan mengikuti keinginannya, maka mereka kelak akan tersesat,"
                android:textSize="8pt"/>

        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:background="@color/color_idgham"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Idgham"
                android:textColor="#000"/>
            <ImageView
                android:id="@+id/btn_play_idgham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_play_arrow"/>
        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvIdhgam"
                android:fontFamily="@font/hafs"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/idhgam"
                android:textSize="10pt"
                android:textColor="#000"/>
            <TextView
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dan yang menciptakan semua berpasang-pasangan dan menjadikan kapal untukmu dan hewan ternak yang kamu tunggangi."
                android:textSize="8pt"/>

        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:background="@color/color_ikhfa"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Ikhfa"
                android:textColor="#000"/>
            <ImageView
                android:id="@+id/btn_play_ikhfa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_play_arrow"/>
        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvIkhfa"
                android:fontFamily="@font/hafs"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ikhfa"
                android:textSize="10pt"
                android:textColor="#000"/>
            <TextView
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dan apa pun yang kamu perselisihkan padanya tentang sesuatu, keputusannya (terserah) kepada Allah. (Yang memiliki sifat-sifat demikian) itulah Allah Tuhanku. Kepada-Nya aku bertawakal dan kepada-Nya aku kembali."
                android:textSize="8pt"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>